force-app/src/objects/cpm__Heartbeat__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_run_date__c</fullName>
        <label>Last run date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Namespace__c</fullName>
        <label>Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Starting_Hour__c</fullName>
        <label>Starting Hour</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Heartbeats</label>
</CustomObject>